# crasher-cpp-client

./: .gitignore  CMakeLists.txt  README.md
examples/: exception_handling_example.cpp  sigsegv_handling_example.cpp
include/: app_info.h  core_dump.h  core_dump.hpp  crashser.h  dump_server_connector.hpp  json_serializer.h  os_info.h  os_info.hpp  stack_trace.hpp  utils.h
protocol/: app_info.proto  core_dump.proto  os_info.proto
sources/: dump_server_connector.cpp  json_serializer.cpp  utils.cpp
